[gd_scene load_steps=15 format=3 uid="uid://bi78dgl80eetd"]

[ext_resource type="Script" path="res://Main Menu.gd" id="1_3in54"]
[ext_resource type="Texture2D" uid="uid://bcw6c6pgu48ss" path="res://icon.svg" id="2_mqk6s"]
[ext_resource type="Texture2D" uid="uid://cp1tgm76rkd43" path="res://graphics/GUI/intro/intro1a.png" id="3_cbjhj"]
[ext_resource type="Texture2D" uid="uid://dsbbxwpvu118b" path="res://graphics/GUI/intro/intro1b.png" id="4_q36ag"]
[ext_resource type="Texture2D" uid="uid://dau5dkt5md72e" path="res://graphics/GUI/intro/intro1c.png" id="5_b8a2l"]
[ext_resource type="Texture2D" uid="uid://cv07qoe84kso4" path="res://graphics/GUI/intro/intro1d.png" id="6_gley3"]
[ext_resource type="Texture2D" uid="uid://cdjc44aucjr77" path="res://graphics/GUI/intro/intro2a.png" id="7_ppcho"]
[ext_resource type="Texture2D" uid="uid://25kg0lw0bxp0" path="res://graphics/GUI/intro/intro3a.png" id="8_1a4cf"]
[ext_resource type="AudioStream" uid="uid://cs84a5qubbk5k" path="res://sounds/MenuClickTemp.wav" id="9_2jmys"]
[ext_resource type="Texture2D" uid="uid://cr3lh2dvk74b3" path="res://graphics/MenuGUI/Menu_Concept.png" id="9_r3lv0"]

[sub_resource type="SpriteFrames" id="SpriteFrames_yhgsg"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_mqk6s")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("3_cbjhj")
}, {
"duration": 1.0,
"texture": ExtResource("4_q36ag")
}, {
"duration": 1.0,
"texture": ExtResource("5_b8a2l")
}, {
"duration": 1e+06,
"texture": ExtResource("6_gley3")
}],
"loop": true,
"name": &"intro1",
"speed": 1.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("7_ppcho")
}],
"loop": true,
"name": &"intro2",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("8_1a4cf")
}],
"loop": true,
"name": &"intro3",
"speed": 5.0
}]

[sub_resource type="LabelSettings" id="LabelSettings_03ynh"]
font_size = 32
font_color = Color(0, 0, 0, 1)
shadow_color = Color(0.627509, 0.830833, 0.853257, 0)

[sub_resource type="LabelSettings" id="LabelSettings_woe0p"]
font_size = 32
font_color = Color(0, 0, 0, 1)

[sub_resource type="LabelSettings" id="LabelSettings_dqixl"]
font_size = 32
font_color = Color(0, 0, 0, 1)

[node name="MainMenu" type="Node2D"]
script = ExtResource("1_3in54")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
visible = false
top_level = true
scale = Vector2(0.314052, 0.314052)
sprite_frames = SubResource("SpriteFrames_yhgsg")
animation = &"intro3"

[node name="Camera2D" type="Camera2D" parent="."]

[node name="TextureRect" type="TextureRect" parent="."]
offset_left = -577.0
offset_top = -325.0
offset_right = 578.0
offset_bottom = 329.0
texture = ExtResource("9_r3lv0")
expand_mode = 1

[node name="CenterContainer" type="CenterContainer" parent="."]
visible = false
offset_left = -575.0
offset_top = -320.0
offset_right = 578.0
offset_bottom = 327.0

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer"]
layout_mode = 2

[node name="Title" type="TextureRect" parent="CenterContainer/VBoxContainer"]
visible = false
layout_mode = 2
texture = ExtResource("2_mqk6s")

[node name="Label" type="Label" parent="CenterContainer/VBoxContainer/Title"]
layout_mode = 0
offset_right = 127.0
offset_bottom = 128.0
text = "Witchy game, or whatever we're gonna call it. "
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 3

[node name="MenuClickSFX" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("9_2jmys")

[node name="play" type="TextureButton" parent="."]
offset_left = -181.0
offset_top = -51.0
offset_right = 183.0
offset_bottom = 77.0
stretch_mode = 0

[node name="Label" type="Label" parent="play"]
layout_mode = 0
offset_left = 71.0
offset_top = 14.0
offset_right = 285.0
offset_bottom = 112.0
text = "Play
"
label_settings = SubResource("LabelSettings_03ynh")
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 3

[node name="options" type="TextureButton" parent="."]
visible = false
offset_left = -415.0
offset_top = 105.0
offset_right = -287.0
offset_bottom = 233.0
texture_normal = ExtResource("2_mqk6s")

[node name="Label" type="Label" parent="options"]
layout_mode = 0
offset_left = -415.0
offset_top = 66.0
offset_right = -288.0
offset_bottom = 194.0
text = "Options"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 3

[node name="quit" type="TextureButton" parent="."]
offset_left = -173.0
offset_top = 201.0
offset_right = 169.0
offset_bottom = 306.0

[node name="Label" type="Label" parent="quit"]
layout_mode = 0
offset_left = 112.0
offset_top = -24.0
offset_right = 239.0
offset_bottom = 104.0
text = "Quit"
label_settings = SubResource("LabelSettings_woe0p")
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 3

[node name="Intro" type="TextureButton" parent="."]
offset_left = -197.0
offset_top = 82.0
offset_right = 183.0
offset_bottom = 175.0

[node name="Label" type="Label" parent="Intro"]
layout_mode = 0
offset_left = 137.0
offset_top = -21.0
offset_right = 264.0
offset_bottom = 107.0
text = "Intro"
label_settings = SubResource("LabelSettings_dqixl")
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 3

[connection signal="pressed" from="play" to="." method="_on_play_pressed"]
[connection signal="pressed" from="options" to="." method="_on_options_pressed"]
[connection signal="pressed" from="quit" to="." method="_on_quit_pressed"]
[connection signal="pressed" from="Intro" to="." method="_on_intro_pressed"]
